edge/k8s/infra/elk-ingress/service-es.yaml
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: infra
spec:
  ports:
    - name: http
      port: 9200
      targetPort: 9200
