edge/k8s/infra/elk-ingress/service-kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: infra
spec:
  ports:
    - name: http
      port: 5601
      targetPort: 5601
