edge/k8s/infra/elk-ingress/ingress-es.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - es.example.com
      secretName: es-tls
  rules:
    - host: es.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: es
                port:
                  number: 9200
